--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Zezetu Sibara</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/ZezetuSibara" target="_blank">Zezetu Sibara</a> and is
+          <a href="https://github.com/ZezetuSibara/js-search-engine-challenge-forked" target="_blank"> on GitHub</a> and
+          <a href="https://66e70a34b9628c16c1ccb94d--moonlit-strudel-5892f4.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
