--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="https://github.com/ZezetuSibara" target="_blank">Zezetu Sibara</a> and is
           <a href="https://github.com/ZezetuSibara/js-search-engine-challenge-forked" target="_blank"> on GitHub</a> and
-          <a href="https://66e70a34b9628c16c1ccb94d--moonlit-strudel-5892f4.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://app.netlify.com/sites/moonlit-strudel-5892f4/deploys/66e70a34b9628c16c1ccb94d" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
